--- a/index.html
+++ b/index.html
@@ -1,1 +1,292 @@
-<h1>Hi</h1>
+<!DOCTYPE HTML>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <title>Aryav's Homepage </title>
+
+    <meta name="author" content="Priya Aryav">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="icon" type="image/png" href="images/seal_icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <style>
+        /* Style for the floating window */
+        #floatWindow {
+            display: none;
+            /* Hidden by default */
+            position: absolute;
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            padding: 15px;
+            width: 300px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 100;
+            top: 100px;
+            left: 100px;
+        }
+
+        /* Close button style */
+        #closeBtn {
+            display: inline-block;
+            float: right;
+            cursor: pointer;
+            color: #aaa;
+        }
+
+        #closeBtn:hover {
+            color: #000;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        td,
+        th {
+            padding: 8px;
+        }
+    </style>
+
+    <style>
+        @media (max-width: 1200px) {
+
+            #responsiveTable td,
+            #responsiveTable td * {
+                font-size: 14px;
+            }
+
+            #resizeImg {
+                height: 16px;
+                width: auto;
+                vertical-align: middle;
+            }
+        }
+
+        @media (max-width: 800px) {
+
+            #responsiveTable td,
+            #responsiveTable td * {
+                font-size: 12px;
+            }
+
+            #resizeImg {
+                height: 14px;
+                width: auto;
+                vertical-align: middle;
+            }
+        }
+
+        @media (max-width: 500px) {
+
+            #responsiveTable td,
+            #responsiveTable td * {
+                font-size: 10px;
+            }
+
+            #resizeImg {
+                height: 12px;
+                width: auto;
+                vertical-align: middle;
+            }
+        }
+    </style>
+
+
+</head>
+
+<body>
+    <table
+        style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <tbody>
+            <tr style="padding:0px">
+                <td style="padding:0px">
+                    <table
+                        style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                        <tbody>
+                            <tr style="padding:0px">
+                                <td style="padding:2.5%;width:63%;vertical-align:middle">
+                                    <p style="text-align:center">
+                                        <name>Priya Aryav</name>
+                                    </p>
+                                    <p>
+                                        Hello, World!, I am a Software Engineer at IBM
+                                    </p>
+                                    <p style="text-align:center">
+                                        <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp/&nbsp
+                                        <a href="pdf/Priya_Aryav_Resume.pdf">CV</a> &nbsp/&nbsp
+                                        <a href="https://x.com/PriyaAryav">X</a> &nbsp/&nbsp
+                                        <a href="https://github.com/iamaryav">Github</a> &nbsp/&nbsp
+                                        <a href="aryav.bearblog.dev">Blogs</a> &nbsp/&nbsp
+                                        <a href="https://www.youtube.com/@PriyaAryav">Youtube</a> &nbsp/&nbsp
+                                        <!-- <a href="https://www.twitch.tv/priyaaryav">Twitch</a> &nbsp/&nbsp -->
+                                        <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a>
+                                        <br>
+                                    </p>
+                                </td>
+                                <td style="padding:2.5%;width:40%;max-width:40%">
+                                    <a href="images/photo.jpeg"><img style="width:80%;max-width:80%" alt="profile photo"
+                                            src="images/profile_pic.jpg" class="hoverZoomLink"></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <!-- <heading>News</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px;width:75%;vertical-align:middle">
+                                    <ul>
+                                        <li>
+                                            <b>This is new section</b>
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table> -->
+
+                    <heading>Professional Career</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li>
+                                            <p>June, 2024 - Present: <br> Currently, Working as Software Engineer at IBM</p>
+                                        </li>
+                                        <li>
+                                            <p>Oct, 2020 - June, 2024 <br> Worked as Software Engineer at TCS</p>
+                                        </li>
+                                        <li>
+                                            <p>Aug, 2016 - July, 2020 <br> Completed my B. Tech in Computer Science & Engineering from <a href="https://bcetdgp.ac.in/">BCET</a></p>
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <heading>Pet Projects</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li><a href="https://github.com/iamaryav/opengrad"> <b>opengrad</b></a> 
+                                            A small autograd engine and neural net library.
+                                        </li>
+                                        <li><a href="https://github.com/iamaryav/tinybpe"> <b>tinybpe</b></a> Created 
+                                            a small byte pair encoder to encode the the text that LLM understands
+                                        </li>
+                                        <li><a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a> 
+                                            A tiny implementaion of GPT2 inspired by Karpathy's minGPT
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <heading>Blogs</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li></a>All the blogs will be posted on First post soon<a href="aryav.bearblog.dev/posts"> bearblog.</a></li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+                    <!-- <heading>Publications</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li>
+                                            <p>This is list</p>
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table> -->
+
+                    <!-- <heading>Teachings</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li>this is project sections </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table> -->
+
+                    <!-- <heading>Featured</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li>
+                                            this is featured section
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+
+
+                        </tbody>
+                    </table> -->
+
+                    <!-- <heading>Misc</heading>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li>
+                                            this is misc section
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+
+
+                        </tbody>
+                    </table> -->
+
+                    <table
+                        style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                        <tbody>
+                            <tr>
+                                <td style="padding:0px">
+                                    <br>
+                                    <p style="text-align:right;font-size:small;">
+                                        Website design from <a href="https://github.com/jonbarron/jonbarron_website">Jon
+                                            Barron</a>
+                                    </p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+</body>
+
+</html>
