--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                         <a href="pdf/Priya_Aryav_Resume.pdf">CV</a> &nbsp/&nbsp
                                         <a href="https://x.com/PriyaAryav">X</a> &nbsp/&nbsp
                                         <a href="https://github.com/iamaryav">Github</a> &nbsp/&nbsp
-                                        <a href="aryav.bearblog.dev">Blogs</a> &nbsp/&nbsp
+                                        <a href="https://aryav.bearblog.dev/">Blogs</a> &nbsp/&nbsp
                                         <a href="https://www.youtube.com/@PriyaAryav">Youtube</a> &nbsp/&nbsp
                                         <!-- <a href="https://www.twitch.tv/priyaaryav">Twitch</a> &nbsp/&nbsp -->
                                         <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a>
@@ -198,7 +198,7 @@
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
-                                        <li></a>All the blogs will be posted on First post soon<a href="aryav.bearblog.dev/posts"> bearblog.</a></li>
+                                        <li></a>All the blogs will be posted on First post soon<a href="https://aryav.bearblog.dev/blog/"> bearblog.</a></li>
                                     </ul>
                                 </td>
                             </tr>
