--- a/index.html
+++ b/index.html
@@ -113,17 +113,21 @@
                                         <name>Priya Aryav</name>
                                     </p>
                                     <p>
-                                        Hello, World!, I am a Software Engineer at IBM
+                                        Software Engineer at IBM with a passion for Machine Learning and AI, focused on building intelligent systems that solve real-world problems.
                                     </p>
                                     <p style="text-align:center">
-                                        <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp/&nbsp
-                                        <a href="pdf/Priya_Aryav_Resume.pdf">CV</a> &nbsp/&nbsp
                                         <a href="https://x.com/PriyaAryav">X</a> &nbsp/&nbsp
                                         <a href="https://github.com/iamaryav">Github</a> &nbsp/&nbsp
                                         <a href="https://aryav.bearblog.dev/">Blogs</a> &nbsp/&nbsp
                                         <a href="https://www.youtube.com/@PriyaAryav">Youtube</a> &nbsp/&nbsp
+                                        <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a> &nbsp/&nbsp
+                                        <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp/&nbsp
+                                        <a href="pdf/Priya_Aryav_Resume.pdf">CV</a> 
                                         <!-- <a href="https://www.twitch.tv/priyaaryav">Twitch</a> &nbsp/&nbsp -->
-                                        <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a>
+                                        <!-- <a href="https://www.instagram.com/priya_aryav/">Insta</a> &nbsp/&nbsp
+                                        <a href="https://www.facebook.com/priya.aryav">FB</a> &nbsp/&nbsp -->
+                                        <!-- <a href="https://www.kaggle.com/priyaaryav">Kaggle</a> &nbsp/&nbsp -->
+                                        <!-- Google scholar, leetcode?, Monkeytype-->
                                         <br>
                                     </p>
                                 </td>
@@ -135,14 +139,14 @@
                         </tbody>
                     </table>
 
-                    <!-- <heading>News</heading>
+                    <!-- <heading>Updates</heading>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                         <tbody>
                             <tr>
                                 <td style="padding:20px;width:75%;vertical-align:middle">
                                     <ul>
                                         <li>
-                                            <b>This is new section</b>
+                                            <b>This is updates section</b>
                                         </li>
                                     </ul>
                                 </td>
@@ -151,19 +155,20 @@
                     </table> -->
 
                     <heading>Professional Career</heading>
+                    <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
                                         <li>
-                                            <p>June, 2024 - Present: <br> Currently, Working as Software Engineer at IBM</p>
+                                            <p>June, 2024 - Present: <br> Currently, Working at <a href="https://www.ibm.com/"> IBM </a> as a Software Engineer. </p>
                                         </li>
                                         <li>
-                                            <p>Oct, 2020 - June, 2024 <br> Worked as Software Engineer at TCS</p>
+                                            <p>Oct, 2020 - June, 2024 <br> Worked at <a href="https://www.tcs.com/"> TCS </a> as Software Engineer. </p>
                                         </li>
                                         <li>
-                                            <p>Aug, 2016 - July, 2020 <br> Completed my B. Tech in Computer Science & Engineering from <a href="https://bcetdgp.ac.in/">BCET</a></p>
+                                            <p>Aug, 2016 - July, 2020 <br> I Completed my B. Tech in Computer Science & Engineering from <a href="https://makautwb.ac.in/"> MAKAUT </a> university. </p>
                                         </li>
                                     </ul>
                                 </td>
@@ -172,19 +177,20 @@
                     </table>
 
                     <heading>Pet Projects</heading>
+                    <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
-                                        <li><a href="https://github.com/iamaryav/opengrad"> <b>opengrad</b></a> 
-                                            A small autograd engine and neural net library.
+                                        <li><a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a> 
+                                            A tiny implementaion of GPT2 inspired by Karpathy's minGPT
                                         </li>
                                         <li><a href="https://github.com/iamaryav/tinybpe"> <b>tinybpe</b></a> Created 
                                             a small byte pair encoder to encode the the text that LLM understands
                                         </li>
-                                        <li><a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a> 
-                                            A tiny implementaion of GPT2 inspired by Karpathy's minGPT
+                                        <li><a href="https://github.com/iamaryav/opengrad"> <b>opengrad</b></a> 
+                                            A small autograd engine and neural net library.
                                         </li>
                                     </ul>
                                 </td>
@@ -192,13 +198,17 @@
                         </tbody>
                     </table>
 
-                    <heading>Blogs</heading>
+                    <heading>Writings</heading>
+                    <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
-                                        <li></a>All the blogs will be posted on First post soon<a href="https://aryav.bearblog.dev/blog/"> bearblog.</a></li>
+                                        <li></a>All the blogs will be posted on <a href="https://aryav.bearblog.dev/blog/"> bearblog.</a>
+                                       <br>
+                                        First post soon... 
+                                        </li>
                                     </ul>
                                 </td>
                             </tr>
@@ -207,6 +217,7 @@
 
 
                     <!-- <heading>Publications</heading>
+                    <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
                             <tr>
@@ -220,8 +231,9 @@
                             </tr>
                         </tbody>
                     </table> -->
-
-                    <!-- <heading>Teachings</heading>
+                    
+                    <!-- <heading>Talks</heading>
+                    <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
                             <tr>
@@ -234,24 +246,22 @@
                         </tbody>
                     </table> -->
 
-                    <!-- <heading>Featured</heading>
-                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                    <!-- <heading>Teachings</heading>
+                    <hr>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
-                                        <li>
-                                            this is featured section
-                                        </li>
+                                        <li>this is project sections </li>
                                     </ul>
                                 </td>
                             </tr>
-
-
                         </tbody>
                     </table> -->
 
                     <!-- <heading>Misc</heading>
+                    <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tbody>
                             <tr>
