more links added

--- a/index.html
+++ b/index.html
@@ -123,11 +123,16 @@
                                         <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a> &nbsp/&nbsp
                                         <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp/&nbsp
                                         <a href="pdf/Priya_Aryav_Resume.pdf">CV</a> 
-                                        <!-- <a href="https://www.twitch.tv/priyaaryav">Twitch</a> &nbsp/&nbsp -->
-                                        <!-- <a href="https://www.instagram.com/priya_aryav/">Insta</a> &nbsp/&nbsp
-                                        <a href="https://www.facebook.com/priya.aryav">FB</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://www.kaggle.com/priyaaryav">Kaggle</a> &nbsp/&nbsp -->
-                                        <!-- Google scholar, leetcode?, Monkeytype-->
+                                        <!-- <a href="https://www.twitch.tv/priyaaryav">Twitch</a> &nbsp/&nbsp -->
+                                        <!-- <a href="https://www.instagram.com/priya_aryav/">Insta</a> &nbsp/&nbsp -->
+                                        <!-- <a href="https://www.facebook.com/priya.aryav">FB</a> &nbsp/&nbsp -->
+
+                                        <!-- <a href="https://leetcode.com/u/PriyaAryav/">Leetcode</a> &nbsp/&nbsp -->
+                                        <!-- <a href="https://codeforces.com/profile/aryav07/">CodeForces</a> &nbsp/&nbsp -->
+                                        <!-- <a href="https://www.hackerrank.com/profile/PriyaAryav">HackerRank</a> &nbsp/&nbsp -->
+                                        <!-- Google scholar, Reddit, Telegram Channel, Discord, whatsapp community?, leetcode?, Monkeytype-->
+                                         <!-- Other Social apps if needed? -->
                                         <br>
                                     </p>
                                 </td>
@@ -187,7 +192,7 @@
                                             A tiny implementaion of GPT2 inspired by Karpathy's minGPT
                                         </li>
                                         <li><a href="https://github.com/iamaryav/tinybpe"> <b>tinybpe</b></a> Created 
-                                            a small byte pair encoder to encode the the text that LLM understands
+                                            a small byte pair encoder to encode text that LLM understands and vice versa.
                                         </li>
                                         <li><a href="https://github.com/iamaryav/opengrad"> <b>opengrad</b></a> 
                                             A small autograd engine and neural net library.
