--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@
                                         <a href="https://www.youtube.com/@PriyaAryav">Youtube</a> &nbsp/&nbsp
                                         <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a> &nbsp/&nbsp
                                         <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp/&nbsp
+                                        <!-- <a href="https://buymeacoffee.com/aryav">Buy me a coffee.</a> &nbsp/&nbsp -->
+                                        <!-- <a href="https://topmate.io/aryav">Book a session with me</a> &nbsp/&nbsp -->
+                                         
+                                        <!-- Here, GitHub, Youtube, CV, LinkedIn, Naukari-->
                                         <a href="pdf/Priya_Aryav_Resume.pdf">CV</a> 
+                                        <!-- <a href="telegram link">Telegram</a> &nbsp/&nbsp -->
+                                        <!-- <a href="discord link">discord Link</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://www.kaggle.com/priyaaryav">Kaggle</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://www.twitch.tv/priyaaryav">Twitch</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://www.instagram.com/priya_aryav/">Insta</a> &nbsp/&nbsp -->
@@ -131,7 +137,15 @@
                                         <!-- <a href="https://leetcode.com/u/PriyaAryav/">Leetcode</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://codeforces.com/profile/aryav07/">CodeForces</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://www.hackerrank.com/profile/PriyaAryav">HackerRank</a> &nbsp/&nbsp -->
+                                        <!-- <a href="Naukari link">Naukari Profile</a> &nbsp/&nbsp -->
                                         <!-- Google scholar, Reddit, Telegram Channel, Discord, whatsapp community?, leetcode?, Monkeytype-->
+
+                                        <!-- Github Repos's stats below for main readme profile page-->
+                                        <!--
+                                        ![](https://github-readme-stats.vercel.app/api?username=iamaryav&show_icons=true)
+                                        ![](https://github-readme-stats.vercel.app/api/top-langs/?username=iamaryav&layout=compact)
+                                        -->
+
                                          <!-- Other Social apps if needed? -->
                                         <br>
                                     </p>
@@ -210,10 +224,15 @@
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
-                                        <li></a>All the blogs will be posted on <a href="https://aryav.bearblog.dev/blog/"> bearblog.</a>
+                                        <li>All the blogs will be posted on <a href="https://aryav.bearblog.dev/blog/"> bearblog.</a>
                                        <br>
                                         First post soon... 
                                         </li>
+                                        <!-- <li>Want to support: <a href="https://buymeacoffee.com/aryav">Buy me a coffee.</a>
+                                        </li> -->
+                                        <!-- <li>Book a session with me: <a href="topmate.io/aryav/">here</a>
+                                        </li> -->
+                                        
                                     </ul>
                                 </td>
                             </tr>
