--- a/index.html
+++ b/index.html
@@ -158,20 +158,23 @@
                         </tbody>
                     </table>
 
-                    <!-- <heading>Updates</heading>
+                    <heading>News</heading>
+                    <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                         <tbody>
                             <tr>
                                 <td style="padding:20px;width:75%;vertical-align:middle">
                                     <ul>
                                         <li>
-                                            <b>This is updates section</b>
+                                            Exploring AI Research & ML
+                                        </li>
+                                        <li>Building GPT2 124M here: <a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a>
                                         </li>
                                     </ul>
                                 </td>
                             </tr>
                         </tbody>
-                    </table> -->
+                    </table>
 
                     <heading>Professional Career</heading>
                     <hr>
