--- a/index.html
+++ b/index.html
@@ -166,9 +166,13 @@
                                 <td style="padding:20px;width:75%;vertical-align:middle">
                                     <ul>
                                         <li>
-                                            Exploring AI Research & ML
+                                            Exploring AI Research & Engineering
                                         </li>
-                                        <li>Building GPT2 124M here: <a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a>
+                                        <li>
+                                            Building GPT2 124M here: <a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a>
+                                        </li>
+                                        <li>
+                                            Writing here: <a href="https://aryav.bearblog.dev/">Blogs<b></b></a>
                                         </li>
                                     </ul>
                                 </td>
