--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                         <name>Priya Aryav</name>
                                     </p>
                                     <p>
-                                        Software Engineer at IBM with a passion for Machine Learning and AI, focused on building intelligent systems that solve real-world problems.
+                                        Software Engineer at IBM | AI Research | Building systems that solve real-world problems.
                                     </p>
                                     <p style="text-align:center">
                                         <a href="https://x.com/PriyaAryav">X</a> &nbsp/&nbsp
@@ -126,7 +126,7 @@
                                         <!-- <a href="https://topmate.io/aryav">Book a session with me</a> &nbsp/&nbsp -->
                                          
                                         <!-- Here, GitHub, Youtube, CV, LinkedIn, Naukari-->
-                                        <a href="pdf/Priya_Aryav_Resume.pdf">CV</a> 
+                                        <a href="pdfs/Priya_Aryav_Resume.pdf">CV</a> 
                                         <!-- <a href="telegram link">Telegram</a> &nbsp/&nbsp -->
                                         <!-- <a href="discord link">discord Link</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://www.kaggle.com/priyaaryav">Kaggle</a> &nbsp/&nbsp -->
@@ -172,7 +172,8 @@
                                             Building GPT2 124M here: <a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a>
                                         </li>
                                         <li>
-                                            Writing here: <a href="https://aryav.bearblog.dev/">Blogs<b></b></a>
+                                            Writing: <a href="https://aryav.bearblog.dev/">Blogs<b></b></a>
+                                             (First post soon...)
                                         </li>
                                     </ul>
                                 </td>
@@ -180,7 +181,23 @@
                         </tbody>
                     </table>
 
-                    <heading>Professional Career</heading>
+                    <!-- <heading>Products</heading>
+                    <hr>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px;width:75%;vertical-align:middle">
+                                    <ul>
+                                        <li>
+                                            Coming soon
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table> -->
+
+                    <heading>Career</heading>
                     <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
@@ -188,13 +205,13 @@
                                 <td style="padding:10px">
                                     <ul>
                                         <li>
-                                            <p>June, 2024 - Present: <br> Currently, Working at <a href="https://www.ibm.com/"> IBM </a> as a Software Engineer. </p>
+                                            <p>June, 2024 - Present: <br> Working at <a href="https://www.ibm.com/"> IBM </a> as a Software Engineer. </p>
                                         </li>
                                         <li>
-                                            <p>Oct, 2020 - June, 2024 <br> Worked at <a href="https://www.tcs.com/"> TCS </a> as Software Engineer. </p>
+                                            <p>Oct, 2020 - June, 2024 <br> Worked at <a href="https://www.tcs.com/"> TCS </a> as a Software Engineer. </p>
                                         </li>
                                         <li>
-                                            <p>Aug, 2016 - July, 2020 <br> I Completed my B. Tech in Computer Science & Engineering from <a href="https://makautwb.ac.in/"> MAKAUT </a> university. </p>
+                                            <p>Aug, 2016 - July, 2020 <br> B.Tech in Computer Science & Engineering from <a href="https://makautwb.ac.in/"> MAKAUT </a> university. </p>
                                         </li>
                                     </ul>
                                 </td>
@@ -210,13 +227,13 @@
                                 <td style="padding:10px">
                                     <ul>
                                         <li><a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a> 
-                                            A tiny implementaion of GPT2 inspired by Karpathy's minGPT
+                                            : A tiny implementaion of GPT2 inspired by Karpathy's minGPT
                                         </li>
-                                        <li><a href="https://github.com/iamaryav/tinybpe"> <b>tinybpe</b></a> Created 
+                                        <li><a href="https://github.com/iamaryav/tinybpe"> <b>tinybpe</b></a> : Created 
                                             a small byte pair encoder to encode text that LLM understands and vice versa.
                                         </li>
                                         <li><a href="https://github.com/iamaryav/opengrad"> <b>opengrad</b></a> 
-                                            A small autograd engine and neural net library.
+                                            : A small autograd engine and neural net library.
                                         </li>
                                     </ul>
                                 </td>
@@ -231,9 +248,8 @@
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
-                                        <li>All the blogs will be posted on <a href="https://aryav.bearblog.dev/blog/"> bearblog.</a>
+                                        <li>All the blogs on <a href="https://aryav.bearblog.dev/blog/"> bearblog</a>
                                        <br>
-                                        First post soon... 
                                         </li>
                                         <!-- <li>Want to support: <a href="https://buymeacoffee.com/aryav">Buy me a coffee.</a>
                                         </li> -->
@@ -291,6 +307,23 @@
                         </tbody>
                     </table> -->
 
+                    <!-- <heading>Fun</heading>
+                    <hr>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px;width:75%;vertical-align:middle">
+                                    <ul>
+                                        <li>
+                                            Like Codforces, Leetcode, chess, Matiks profile link
+                                            Coming soon
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table> -->
+
                     <!-- <heading>Misc</heading>
                     <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
@@ -316,7 +349,7 @@
                                 <td style="padding:0px">
                                     <br>
                                     <p style="text-align:right;font-size:small;">
-                                        Website design from <a href="https://github.com/jonbarron/jonbarron_website">Jon
+                                        Design from <a href="https://github.com/jonbarron/jonbarron_website">Jon
                                             Barron</a>
                                     </p>
                                 </td>
