--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             padding: 8px;
         }
         .speaker {
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
             }
     </style>
@@ -171,7 +171,7 @@
                         </tbody>
                     </table>
 
-                    <heading>News</heading>
+                    <heading>New/s</heading>
                     <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                         <tbody>
