--- a/index.html
+++ b/index.html
@@ -118,10 +118,6 @@
                                         <name>Priya Aryav | प्रिय आर्यव
                                             <i class="fas fa-volume-up speaker" onclick="document.getElementById('audio').play();" title="Name Pronunciation"></i>
                                             <audio id="audio" src="data/name.mp3"></audio>
-                                            <!-- <audio controls> 
-                                                <source src="data/name.mp3" type="audio/mpeg">
-                                                Your browser does not support the audio element.
-                                            </audio> -->
                                         </name>
                                     </p>
                                     <p>
@@ -131,7 +127,7 @@
                                     <p style="text-align:center">
                                         <a href="https://x.com/PriyaAryav">X</a> &nbsp/&nbsp
                                         <a href="https://github.com/iamaryav">Github</a> &nbsp/&nbsp
-                                        <a href="https://aryav.bearblog.dev/">Blogs</a> &nbsp/&nbsp
+                                        <a href="https://aryav.bearblog.dev/blog">Blogs</a> &nbsp/&nbsp
                                         <a href="https://www.youtube.com/@PriyaAryav">Youtube</a> &nbsp/&nbsp
                                         <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a> &nbsp/&nbsp
                                         <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp/&nbsp
@@ -181,13 +177,14 @@
                                         <li>
                                             Exploring AI Research & Engineering
                                         </li>
+
+                                        <li>
+                                            New Blog: <a href="https://aryav.bearblog.dev/tinybpe-a-tiny-byte-pair-encoder/">tinybpe: a tiny byte pair encoder<b></b></a>
+                                        </li> 
+                                        
                                         <li>
                                             Building GPT2 124M here: <a href="https://github.com/iamaryav/tinyGPT">
                                                 <b>tinyGPT</b></a>
-                                        </li>
-                                        <li>
-                                            Writing: <a href="https://aryav.bearblog.dev/">Blogs<b></b></a>
-                                            (First post soon...)
                                         </li>
                                     </ul>
                                 </td>
@@ -266,7 +263,10 @@
                         <tbody>
                             <tr>
                                 <td style="padding:10px">
-                                    <ul>
+                                    <ul>  
+                                        <li>
+                                           <a href="https://aryav.bearblog.dev/tinybpe-a-tiny-byte-pair-encoder/">tinybpe: a tiny byte pair encoder<b></b></a>
+                                        </li>
                                         <li>All the blogs on <a href="https://aryav.bearblog.dev/blog/"> bearblog</a>
                                             <br>
                                         </li>
