--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                                         </li>
 
                                         <li>
-                                            New Blog: <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
+                                            <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
+                                            : New Blog
                                         </li> 
                                         <li><a href="https://github.com/iamaryav/models"> <b>models</b></a>
                                             : Model: Pre-training, Mid-training, Post-training, Inference, RL
@@ -243,7 +244,7 @@
                                 <td style="padding:10px">
                                     <ul>
                                         <li><a href="https://github.com/iamaryav/models"> <b>models</b></a>
-                                            : Model: Pre-training, Mid-training, Post-training, Inference, RL
+                                            : Pre-training, Mid-training, Post-training, Inference, RL
                                         </li>
                                         <li><a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a>
                                             : A tiny implementaion of GPT2 inspired by Karpathy's minGPT
@@ -256,7 +257,7 @@
                                             : A small autograd engine and neural net library.
                                         </li>
                                         <li><a href="https://github.com/iamaryav/matrix"> <b>matrix</b></a>
-                                            : Intuition about Matrix and their operations
+                                            : Intuition about Matrix and their operations.
                                         </li>
                                         <li><a href="https://github.com/iamaryav/ai-notebooks"><b>ai-notebooks</b></a>
                                             : Implementing ML algorithms in Jupyter Notebook.
