--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
                                 <td style="padding:10px">
                                     <ul>
                                         <li>
-                                            <p>June, 2024 - Present: <br> Working at <a href="https://www.ibm.com/"> IBM
-                                                </a> as a Software Engineer. </p>
+                                            <p>June, 2024 - Present: <br> 
+                                                Working at IBM as a Software Engineer. </p>
                                         </li>
                                         <li>
-                                            <p>Oct, 2020 - June, 2024 <br> Worked at <a href="https://www.tcs.com/"> TCS
-                                                </a> as a Software Engineer. </p>
+                                            <p>Oct, 2020 - June, 2024 <br>
+                                                Worked at TCS as a Software Engineer. </p>
                                         </li>
                                         <li>
-                                            <p>Aug, 2016 - July, 2020 <br> B.Tech in Computer Science & Engineering from
-                                                <a href="https://makautwb.ac.in/"> MAKAUT </a> university.
+                                            <p>Aug, 2016 - July, 2020 <br> 
+                                                B.Tech in Computer Science & Engineering from MAKAUT university.
                                             </p>
                                         </li>
                                     </ul>
