updated blog info

--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
                                         <li>
                                             Exploring AI Research & Engineering
                                         </li>
-
                                         <li>
-                                            <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
-                                            : New Blog
+                                            New Blog: <a href="https://aryav.bearblog.dev/the-attention/">The Attention<b></b></a>
+                                        </li> 
+                                        <li>
+                                           New Blog: <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
                                         </li> 
                                         <li><a href="https://github.com/iamaryav/models"> <b>models</b></a>
                                             : Model: Pre-training, Mid-training, Post-training, Inference, RL
@@ -275,14 +276,17 @@
                             <tr>
                                 <td style="padding:10px">
                                     <ul>  
+                                        <li>All blogs on: <a href="https://aryav.bearblog.dev/blog/"> bearblog</a>
+                                            <br>
+                                        </li>
+                                        <li>
+                                           <a href="https://aryav.bearblog.dev/the-attention/">The Attention<b></b></a>
+                                        </li>
                                         <li>
                                            <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
                                         </li>
                                         <li>
                                            <a href="https://aryav.bearblog.dev/tinybpe-a-tiny-byte-pair-encoder/">tinybpe: a tiny byte pair encoder<b></b></a>
-                                        </li>
-                                        <li>All the blogs on <a href="https://aryav.bearblog.dev/blog/"> bearblog</a>
-                                            <br>
                                         </li>
                                         <!-- <li>Want to support: <a href="https://buymeacoffee.com/aryav">Buy me a coffee.</a>
                                         </li> -->
