updated new blog link

--- a/index.html
+++ b/index.html
@@ -178,16 +178,10 @@
                                             Exploring AI Research & Engineering
                                         </li>
                                         <li>
-                                            New Blog: <a href="https://aryav.bearblog.dev/the-attention/">The Attention<b></b></a>
-                                        </li> 
-                                        <li>
-                                           New Blog: <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
+                                           New Blog: <a href="https://aryav.bearblog.dev/build-gpt-from-scratch/">Build GPT from scratch<b></b></a>
                                         </li> 
                                         <li><a href="https://github.com/iamaryav/tinyGPT"><b>tinyGPT</b></a>
-                                            : A tiny implementaion of GPT2 inspired by Karpathy's minGPT
-                                        </li>
-                                        <li><a href="https://github.com/iamaryav/models"> <b>models</b></a>
-                                            : Model: Pre-training, Mid-training, Post-training, Inference, RL
+                                            : A tiny implementaion of GPT inspired by Karpathy's nanoGPT
                                         </li>
                                     </ul>
                                 </td>
@@ -220,7 +214,7 @@
                                 <td style="padding:10px">
                                     <ul>
                                         <li><a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a>
-                                            : A tiny implementaion of GPT2 inspired by Karpathy's minGPT
+                                            : A tiny implementaion of GPT inspired by Karpathy's minGPT
                                         </li>
                                         <li><a href="https://github.com/iamaryav/tinybpe"> <b>tinybpe</b></a> : Created
                                             a small byte pair encoder to encode text that LLM understands and vice
@@ -251,6 +245,9 @@
                             <tr>
                                 <td style="padding:10px">
                                     <ul>  
+                                        <li>
+                                           <a href="https://aryav.bearblog.dev/build-gpt-from-scratch/">Build GPT from scratch<b></b></a>
+                                        </li>
                                         <li>
                                            <a href="https://aryav.bearblog.dev/the-attention/">The Attention<b></b></a>
                                         </li>
